2006-07-24  Stefan Petersen  <spe@localhost.localdomain>

	* src/gerb_file.c: Fixed bug #1236047, so now gerbv handles
          negative coordinates.

	* src/gerb_file.c, src/gerbv.c: Hopefully reduce SEGVs
          even more by better error checking of operations in
          gerb_fclose.

2006-07-23  Stefan Petersen  <spe@localhost.localdomain>

	* src/gerb_image.h, src/gerber.c, gerbv.c: Added patch from
          extensive (Sourceforge alias) that according to him make
          gerbv handles autoscaling of gerber files with mm better.

	* src/drill.c, src/gerb_file.c: Fixed some possible memory
          leaks and SIGSEGVs pointed out by Wolfgang Wieser
          (hand patched from #1201900).

2006-05-07  Stefan Petersen  <spe@localhost.localdomain>

	* src/draw_amacro.c: Daniel Mack - zonque submitted
	  as a patch (1350283) (with no file attached though) that 
	  renaming stack_t to macro_stack_t would make gerbv build
	  on darwin.

	* configure.in: Removed GTK+ 1.2 support and builds 
	  by default for GTK+ 2.x.

2005-09-28 Dan McMahill       

	* src/drill.c: Remove an lval typecast.  Not only does this get
	  gerbv to compile with gcc4 and other non-gcc compilers, it 
	  was no longer needed as the types involved were all doubles
	  anyway.

-- Release 1.0.1 --
	
2005-02-15  Stefan Petersen  <spe@siouxsie.umunet.org>

	* src/draw_amacro.c: Forgot to copy gc to local_gc
	  so drawing inherits gc from image wide setting.
	  Pointed out by Warren Young.

2005-02-08  Tomasz Motylewski  <t.motylewski@bfad.de>
	* src/gerbv.c: malloc strlen+2, not +1
	* src/gerb_file.c: malloc len+1, not len

-- Release 1.0.0 --
	
2004-12-28  Stefan Petersen  <spe@siouxsie.umunet.org>

	* src/draw.c: When drawing circles I ignored if circle
	  had inner diameter, which was pointed out by Harry Eaton. 
	  Not anymore... Closes bug #1050340 in this branch.

2004-10-30  Stefan Petersen  <spe@siouxsie.umunet.org>

	* src/draw_amacro.c: Forgot to use local_gc when drawing some