@@ -1,3 +1,10 @@
+2006-07-25  Stefan Petersen  <spe@localhost.localdomain>
+
+	* configure.in, man/gerbv.1.in, src/Makefile.am:
+	  Remade build system so it should be able to handle
+	  autoconf 2.60 and automake 1.9. Thanks FSF for yet 
+	  again breaking a working API.
+
 2006-07-24  Stefan Petersen  <spe@localhost.localdomain>
 
 	* src/gerb_file.c: Fixed bug #1236047, so now gerbv handles
